# openapi-client-template

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  copier.json  copier.yml  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  template-ci.yml
docs/analysis/: extraction-plan.md
docs/inventories/: README.md  katana-inventory.md  stocktrim-inventory.md
openapi-client-core/: .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  README.md  pyproject.toml
openapi-client-core/.github/workflows/: ci.yml
openapi-client-core/src/openapi_client_core/: __init__.py  client.py
openapi-client-core/src/openapi_client_core/auth/: __init__.py  credentials.py  exceptions.py
openapi-client-core/src/openapi_client_core/errors/: __init__.py  exceptions.py  handler.py  models.py
openapi-client-core/src/openapi_client_core/testing/: __init__.py
openapi-client-core/src/openapi_client_core/transport/: __init__.py  retry.py
openapi-client-core/tests/: conftest.py  test_client.py
openapi-client-core/tests/unit/: test_version.py
openapi-client-core/tests/unit/auth/: test_credentials.py  test_exceptions.py
openapi-client-core/tests/unit/errors/: test_error_exceptions.py  test_handler.py  test_models.py
openapi-client-core/tests/unit/transport/: test_retry.py
scripts/: sync-template.py
shared-libs/openapi-client-core/: README.md
template/{{project_slug}}/: .editorconfig  .gitignore  .pre-commit-config.yaml.jinja  CONTRIBUTING.md.jinja  README.md.jinja  pyproject.toml.jinja
template/{{project_slug}}/.github/workflows/: client-ci.yml.jinja
template/{{project_slug}}/docs/: index.md.jinja
template/{{project_slug}}/src/{{package_name}}/: __init__.py.jinja
template/{{project_slug}}/tests/: test_smoke.py.jinja
template/{{project_slug}}/tests/integration/: test_integration_placeholder.py.jinja
